// https://www.dbml.org/docs/

// Legend:
// PG (Attribute) -> PostgreSQL (preferred DB choice)
// FS (Attribute) -> Firestore (preferred DB choice)
// Trimmable (Attribute) -> Data that can be warehoused by deleting older data from production after backing up everything into data warehouse

Project ClassExpress {
  database_type: 'PostgreSQL'
  Note: 'SQL DB for Class Express'
}

// FS
Table userAccounts {
  id int [pk, increment, not null, unique]
  createdAt bigint [default: `EXTRACT(EPOCH FROM now() at time zone 'utc')`]
  email varchar [not null, unique]
  phoneNumber varchar [null] // Includes area code
  firstName varchar [not null]
  lastName varchar [null]
  countryCode varchar [not null]
  cityCode varchar [not null] // @todo Should this allow null? If null, then use country
  timezone varchar [not null]
  profilePictureURL varchar [null]
  currency varchar [not null]
  verified_email boolean [default: false]
  verified_phone boolean [default: false]
  deleted boolean [default: false]
}

// FS
Table userSettings {
  userID int [pk, not null, ref: - userAccounts.id]
  notification_email boolean [null]
  notification_mobile boolean [null]
  // @todo Add a updatedAt timestamp
}

// FS
// Partners / Business organisations.
Table partners {
  id int [pk, increment, not null, unique]
  createdAt bigint [default: `EXTRACT(EPOCH FROM now() at time zone 'utc')`]
  name varchar [not null]
  description varchar [not null]
  email varchar [not null, unique]
  phoneNumber varchar [not null] // Includes area code
  location_address varchar [not null]
  location_coordinates varchar [not null]
  website varchar [null]
  pictureSources varchar // Perhaps use an array?
  verified_email boolean [default: false]
  verified_phone boolean [default: false]
  verified boolean [default: false] // Is the business verified by us (Class Express)?
  deleted boolean [default: false]
}

// FS
// Individual users (employees) of a Partner / Business organisation
Table partnerAccounts {
  id int [pk, increment, not null, unique]
  createdAt bigint [default: `EXTRACT(EPOCH FROM now() at time zone 'utc')`]
  partnerID int [ref: > partners.id, not null]
  name varchar [not null]
  admin boolean [default: false]
  permissions varchar // Perhaps use an array?
  email varchar [not null, unique]
  phoneNumber varchar [null] // Includes area code
  verified_email boolean [default: false]
  verified_phone boolean [default: false]
  deleted boolean [default: false]
}

// FS
Table partnerSettings {
  userID int [pk, ref: - partnerAccounts.id, not null]
  notification_email boolean [null]
  notification_mobile boolean [null]
  // @todo Add a updatedAt timestamp
}

// Trimmable + PG
// Since planID is fixed overtime, it is used to get cost of plan and currency, instead of storing a copy of it in this table
Table userPlans {
  id bigint [pk, increment, not null]
  // @todo Add updatedAt to track when this is updated for analytics purposes?
  createdAt bigint [default: `EXTRACT(EPOCH FROM now() at time zone 'utc')`]
  userID int [ref: > userAccounts.id, not null] // Many rows with each row being 1 plan in users history
  planID int [ref: > subscriptionPlans.id, not null]
  // Might look into using ISO 8061 defaults, but using unix seconds for now for consistency
  start bigint [not null] // Although can be generated, using not null and no default, forces server to always generate
  end bigint [null]
}

// Trimmable + PG
// Since topupID is fixed overtime, it is used to get cost of plan and currency, instead of storing a copy of it in this table
// Each topup is only valid in same period it is purchased. Determined by checking if purchaseTime is between start and end of current period
Table userTopups {
  id bigint [pk, increment, not null]
  // @todo Add updatedAt to track when this is updated for analytics purposes?
  purchaseTime bigint [default: `EXTRACT(EPOCH FROM now() at time zone 'utc')`]
  userID int [ref: > userAccounts.id, not null] // Many rows with each row being 1 topup in users history
  topupID int [ref: > topupOptions.id, not null]
}

// @todo need to add selected time of class to this too right?
// @todo Do we need to add the start time of the class?
// PG + Trimmable (keep like the latest 20 user past classes, allow user to request for more)
// Instead of relying on a Points table that needs to be updated every month, perhaps use a transactions table and the userPlans table to compute the points on demand
// Bascially records of user bookings and cancellation events and more
// Classes that the users have booked and did not cancel
Table userBookingTransactions {
  id bigint [pk, increment, not null]
  actionTime bigint [default: `EXTRACT(EPOCH FROM now() at time zone 'utc')`] // TS should be provided by client, but defaults to server timestamp if none
  userID int [ref: > userAccounts.id, not null]
  classID int [ref: > classes.id, not null]
  points int [not null] // A copy of the points of the class at the moment of action, as points of a class can be changed by partner later on
  // Only store start time as end time should be computed using length of class
  // Might look into using ISO 8061 defaults, but using unix seconds for now for consistency
  startTime bigint [not null]
}

// @todo need to add selected time of class to this too right?
// @todo Do we need to add the start time of the class?
// Trimmable
// Bascially records of user bookings and cancellation events and more
// Classes that the user have booked/attended/booked+cancelled(by user or partner)
// For analytics only
Table userBookingTransactionsAnalytics {
  id bigint [pk, increment, not null]
  actionTime bigint [default: `EXTRACT(EPOCH FROM now() at time zone 'utc')`] // TS should be provided by client, but defaults to server timestamp if none
  userID int [ref: > userAccounts.id, not null]
  classID int [ref: > classes.id, not null]
  points int [not null] // A copy of the points of the class at the moment of action, as points of a class can be changed by partner later on
  // Both booked and cancelled defaults to false to make it easier as only need to set one to be true on insert
  booked boolean [default: false]
  cancelled boolean [default: false]
}

// FS or PG
Table classes {
  id int [pk, increment, not null, unique]
  createdAt bigint [default: `EXTRACT(EPOCH FROM now() at time zone 'utc')`]
  partnerID int [ref: > partners.id, not null]
  name varchar [not null]
  description varchar [not null] // HTML allowed
  length int [not null]
  points int [not null]
  maxParticipants int [not null]
  pictureSources varchar [null] // Perhaps use an array?
  location_address varchar [null]
  location_coordinates varchar [null]
  deleted boolean [default: false]
}

// FS or PG
// Each row will be a individual RRULE?
// @todo
Table classSchedule {
  id bigint [pk, increment, not null]
  classID int [ref: > classes.id, not null]
  // @todo Either createAt or updatedAt to track when this is updated for analytics purposes
  // createdAt bigint [default: `EXTRACT(EPOCH FROM now() at time zone 'utc')`]
}

// PG or FS
Table userFavourites {
  id bigint [pk, increment, not null]
  userID int [ref: > userAccounts.id, not null]
  favouritedAt bigint [default: `EXTRACT(EPOCH FROM now() at time zone 'utc')`] // TS should be provided by client, but defaults to server timestamp if none
  // Only one will be nulled, either classID or partnerID
  // Get classIDs by filtering for NOT NULL classIDs
  classID int [ref: > classes.id, null] // Defaults to null
  // Get partnerIDs by filtering for NOT NULL partnerIDs
  partnerID int [ref: > partners.id, null] // Defaults to null
}

// @todo add columns start/end, to allow us to specify when this is avail to user for? Like good for setting promos
// All subscription plans across time
Table subscriptionPlans {
  id int [pk, increment, not null, unique] // This is also the "planID"
  createdAt bigint [default: `EXTRACT(EPOCH FROM now() at time zone 'utc')`]
  available boolean [default: true] // By default all plans are available // @todo Can change to be a procedure to be executed to see if this is avail?
  name varchar [not null]
  copywriting varchar [not null] // HTML allowed
  currency varchar [not null]
  price int [not null] // Price in the specified currency
  totalPoints int [not null]
}

// @todo Create seperate table for country codes for subscription plans and other tables
  // Country that this plan is available in = All countries if none specified
  // Usually need to specify and usually the same as the currency of the plan.
  // Multiple rows, 1 row for each unique countryCode
  // countryCode varchar [not null]

// FS
// @todo add columns start/end, to allow us to specify when this is avail to user for? Like good for setting promos
// All topupOptions allowed other then the custom points topup
Table topupOptions {
  id int [pk, increment, not null, unique] // This is also the "topupID"
  createdAt bigint [default: `EXTRACT(EPOCH FROM now() at time zone 'utc')`]
  available boolean [default: true] // By default all plans are available // @todo Can change to be a procedure to be executed to see if this is avail?
  name varchar [not null]
  copywriting varchar [not null] // HTML allowed
  currency varchar [not null]
  price int [not null]
  totalPoints int [not null]
}

// PG + Trimmable (If trimmed, we need to make this into a seperate service that will hold a materialized view with cached result)
// PG needed for advance processing, to add a caching layer in front of queries for this with a 1 ~ 2 days expiry?
Table reviews {
  id bigint [pk, increment, not null]
  reviewedOn bigint [default: `EXTRACT(EPOCH FROM now() at time zone 'utc')`]
  userID int [ref: > userAccounts.id, not null]
  classID int [ref: > classes.id, not null]
  // @todo Add what time was the lesson so partner can take action -- Implement after classSchedule is implemented
  points int [not null]
  description varchar [null]
}
